--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 aiohttp==2.2.5
 async-timeout==2.0.1
+beautifulsoup4==4.6.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
 discord.py==1.0.0a1459+g3cb6ac1
+google-search==1.0.2
 idna==2.6
+lavalink==2.1.5
+lxml==4.2.1
 multidict==4.1.0
 pycparser==2.18
-pyimgur==0.6.0
 PyNaCl==1.1.2
 requests==2.18.4
 six==1.11.0
