--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,33 @@
+aiofiles==0.3.2
 aiohttp==2.2.5
+aioredis==1.1.0
 async-timeout==2.0.1
-beautifulsoup4==4.6.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
 discord.py==1.0.0a1459+g3cb6ac1
-google-search==1.0.2
+google-api-python-client==1.6.6
+hiredis==0.2.0
+httplib2==0.11.3
+httptools==0.0.11
 idna==2.6
 lavalink==2.1.5
 lxml==4.2.1
 multidict==4.1.0
+oauth2client==4.1.2
+Pillow==5.1.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycparser==2.18
 PyNaCl==1.1.2
 requests==2.18.4
+rsa==3.4.2
+sanic==0.7.0
 six==1.11.0
+ujson==1.35
+uritemplate==3.0.0
 urllib3==1.22
+uvloop==0.9.1
 websockets==4.0.1
 weeb.py==1.1.0
 yarl==1.1.1
