--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -27,6 +29,7 @@ var/
 # Our configuration files
 config.py
 cache/
+lavalink/
 
 # PyCharm
 .idea/
